# practice

./: LICENSE  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  task3.yml
alembic/: env.py
alembic/versions/: 610085bf4cae_phone_number_is_removed.py  7a2956961f3f_users_table.py
app/: main.py
app/adapters/api/: user_controller.py
app/adapters/api/models/: user.py
app/adapters/db/: database.py
app/adapters/db/models/: user.py
app/adapters/repositories/: user_repository.py
app/config/: settings.py
app/config/resources/: .env.test
app/core/domain/: user.py
app/core/ports/repositories/: user_repository.py
app/core/use_cases/: user_service.py
